stylesheets/stylesheet.css
/* ... */
@media screen and (max-width: 42em) {
  .page-header {
    background-attachment: scroll;
  }
  .page-header-content {
    max-width: 100%;
    padding: 2rem 4rem;
    background: rgba(255,255,255,0.8);
    background: -moz-linear-gradient(left, rgba(255,255,255,0.5) 0%, rgba(255,255,255,0.9) 25%, rgba(246,246,246,0.9) 75%, rgba(255,255,255,0.5) 100%);
    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,255,255,0.5)), color-stop(25%, rgba(255,255,255,0.9)), color-stop(75%, rgba(246,246,246,0.9)), color-stop(100%, rgba(255,255,255,0.5)));
    background: -webkit-linear-gradient(left, rgba(255,255,255,0.5) 0%, rgba(255,255,255,0.9) 25%, rgba(246,246,246,0.9) 75%, rgba(255,255,255,0.5) 100%);
    background: -o-linear-gradient(left, rgba(255,255,255,0.5) 0%, rgba(255,255,255,0.9) 25%, rgba(246,246,246,0.9) 75%, rgba(255,255,255,0.5) 100%);
    background: -ms-linear-gradient(left, rgba(255,255,255,0.5) 0%, rgba(255,255,255,0.9) 25%, rgba(246,246,246,0.9) 75%, rgba(255,255,255,0.5) 100%);
    background: linear-gradient(to right, rgba(255,255,255,0.5) 0%, rgba(255,255,255,0.9) 25%, rgba(246,246,246,0.9) 75%, rgba(255,255,255,0.5) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1 );
  }
}




/* === HEADER CONTENT === */
.page-header h1 {
  font-family: 'Montserrat';
  font-weight: 400;
  color: #602480;
}

.project-name {
  margin-top: 0;
  margin-bottom: 0.1rem;
}

@media screen and (min-width: 64em) {
  .project-name {
    font-size: 3.25rem;
  }
}

@media screen and (min-width: 42em) and (max-width: 64em) {
  .project-name {
    font-size: 2.25rem;
  }
}

@media screen and (max-width: 42em) {
  .project-name {
    font-size: 1.75rem;
  }
}

.project-tagline {
  margin-bottom: 2rem;
  font-family: 'Open Sans';
  font-size: 20px;
  font-weight: 300;
  line-height: 1.2em;
  color: rgb(41,160,209);
}

@media screen and (min-width: 64em) {
  .project-tagline {
    font-size: 1.25rem;
  }
}

@media screen and (min-width: 42em) and (max-width: 64em) {
  .project-tagline {
    font-size: 1.15rem;
  }
}

@media screen and (max-width: 42em) {
  .project-tagline {
    font-size: 1rem;
  }
}



/* === BUTTONS === */
.btn {
  display: inline-block;
  margin-bottom: 1rem;
  color: rgb(41,160,209);
  background-color: rgba(255,255,255,.35);
  border: 1px solid rgb(41,160,209);
  font-weight: 300;
  text-align: center;
  border-radius: 0.3rem;
  transition: color 0.2s, background-color 0.2s, border-color 0.2s;
}

.btn + .btn {
  margin-left: 1rem;
}

.btn:hover {
  text-decoration: none;
  background-color: rgb(41,160,209);
  border: 1px solid rgb(41,160,209);
  color: rgb(255,255,255);
  cursor: pointer;
}

a:last-of-type.btn {
  color: rgba(255,255,255,1);
  text-decoration: none;
  background-color: #0eb078;
  border: 1px solid #0eb078;
}
a:last-of-type.btn:hover {
  background-color: #FFA500;
  border: 1px solid #FFA500;
}

/* BUTTONS media queries */
@media screen and (min-width: 64em) {
  .btn {
    padding: 0.75rem 1rem; }
}

@media screen and (min-width: 42em) and (max-width: 64em) {
  .btn {
    padding: 0.6rem 0.9rem;
    font-size: 0.9rem;
  }
}

@media screen and (max-width: 42em) {
  .btn {
    display: block;
    width: 100%;
    padding: 0.75rem;
    font-size: 0.9rem;
    max-width: 15rem;
    margin: 0 auto;
  }
  .btn + .btn {
    margin: 1rem auto 0;
  }
}



/* === MAIN CONTENT === */
.main-content {
  font-weight: 300;
  font-size: 1rem;
}
.main-content :first-child {
  margin-top: 0; }
.main-content img {
  max-width: 100%;
  margin: 0 auto;
  display: block;
}
.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
  /*margin-top: 2rem;*/
  margin-bottom: 1rem;
  font-weight: 300;
  color: #159957; }
.main-content p {
  margin-bottom: 1em; }
.main-content code {
  padding: 2px 4px;
  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
  font-size: 0.9rem;
  color: #383e41;
  background-color: #f3f6fa;
  border-radius: 0.3rem; }
.main-content pre {
  padding: 0.8rem;
  margin-top: 0;
  margin-bottom: 1rem;
  font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
  color: #567482;
  word-wrap: normal;
  background-color: #f3f6fa;
  border: solid 1px #dce6f0;
  border-radius: 0.3rem; }
  .main-content pre > code {
    padding: 0;
    margin: 0;
    font-size: 0.9rem;
    color: #567482;
    word-break: normal;
    white-space: pre;
    background: transparent;
    border: 0; }
.main-content .highlight {
  margin-bottom: 1rem; }
  .main-content .highlight pre {
    margin-bottom: 0;
    word-break: normal; }
.main-content .highlight pre, .main-content pre {
  padding: 0.8rem;
  overflow: auto;
  font-size: 0.9rem;
  line-height: 1.45;
  border-radius: 0.3rem; }
.main-content pre code, .main-content pre tt {
  display: inline;
  max-width: initial;
  padding: 0;
  margin: 0;
  overflow: initial;
  line-height: inherit;
  word-wrap: normal;
  background-color: transparent;
  border: 0; }
  .main-content pre code:before, .main-content pre code:after, .main-content pre tt:before, .main-content pre tt:after {
    content: normal; }
.main-content ul, .main-content ol {
  margin-top: 0; }
.main-content blockquote {
  padding: 0 1rem;
  margin-left: 0;
  color: #819198;
  border-left: 0.3rem solid #dce6f0; }
  .main-content blockquote > :first-child {
    margin-top: 0; }
  .main-content blockquote > :last-child {
    margin-bottom: 0; }
.main-content table {
  display: block;
  width: 100%;
  overflow: auto;
  word-break: normal;
  word-break: keep-all; }
  .main-content table th {
    font-weight: bold; }
  .main-content table th, .main-content table td {
    padding: 0.5rem 1rem;
    border: 1px solid #e9ebec; }
.main-content dl {
  padding: 0; }
  .main-content dl dt {
    padding: 0;
    margin-top: 1rem;
    font-size: 1rem;
    font-weight: bold; }
/* ... */

